GETP-56 fix: 회원 가입 시 필수 서비스 약관에 동의하지 않으면 회원 엔티티를 생성하지 않도록 변경